--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "ui-driver-skel",
+  "name": "ui-driver-nerdalize",
   "version": "0.0.2",
-  "description": "Skeleton Rancher UI driver for custom docker-machine drivers",
+  "description": "Nerdalize Rancher UI driver for custom docker-machine drivers",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/rancher/ui-driver-skel.git"
+    "url": "git+https://github.com/nerdalize/ui-driver-nerdalize.git"
   },
   "author": "Rancher Labs, Inc.",
   "license": "Apache-2.0",
   "bugs": {
-    "url": "https://github.com/rancher/rancher/issues"
+    "url": "https://github.com/nerdalize/rancher-ui/issues"
   },
   "scripts": {
     "start": "./node_modules/.bin/gulp server",
@@ -17,7 +17,7 @@
     "build": "./node_modules/.bin/gulp build",
     "upload": "./scripts/upload"
   },
-  "homepage": "https://github.com/rancher/ui-driver-skel#readme",
+  "homepage": "https://github.com/nerdalize/ui-driver-nerdalize#readme",
   "devDependencies": {
     "del": "3.0.0",
     "gulp": "3.9.1",
@@ -31,6 +31,6 @@
     "gulp-wrap-amd": "0.5.0",
     "jshint": "2.9.5",
     "yargs": "11.0.0",
-    "ember-source": "^3.0.0"
+    "ember-source": "~2.16.2"
   }
 }
